# samplevnf

./: .gitignore  .gitreview  INFO  INFO.yaml  INSTALL.rst  Makefile  RELEASE_NOTES.rst  install.sh  setenv.sh  tox.ini
VNF_Catalogue/: .Dockerfile.swp  Dockerfile  README.md  app.js  database.js  docker-compose.yml  docker.sh  docker_commands.sh  env.sh  minio.js  package.json  style.css
VNFs/DPPD-PROX/: Makefile  README  acl_field_def.h  arp.h  bng_pkts.h  cdf.c  cdf.h  cfgfile.c  cfgfile.h  clock.c  clock.h  cmd_parser.c  cmd_parser.h  commands.c  commands.h  cqm.c  cqm.h  defaults.c  defaults.h  defines.h  display.c  display.h  display_irq.c  display_irq.h  display_l4gen.c  display_l4gen.h  display_latency.c  display_latency.h  display_latency_distr.c  display_latency_distr.h  display_mempools.c  display_mempools.h  display_pkt_len.c  display_pkt_len.h  display_ports.c  display_ports.h  display_priority.c  display_priority.h  display_rings.c  display_rings.h  (+198 more)
VNFs/DPPD-PROX/config/: acl_table.lua  bng-1q-4ports.cfg  bng-4ports.cfg  bng-8ports-17cores.cfg  bng-8ports-25cores.cfg  bng-8ports.cfg  bng-no-cpu-topology-4ports.cfg  bng-ovs-usv-4ports.cfg  bng-qos-4ports.cfg  bng-qos-8ports.cfg  bng-qos-8ports_17cores.cfg  bng-qos-8ports_25cores.cfg  cgnat.cfg  cgnat_table.lua  cpe_table.lua  cpe_table_short.lua  dscp.lua  dscp2.lua  esp.cfg  ip6_tun_bind.lua  ipv4-2.lua  ipv4-4ports.lua  ipv4.lua  ipv4_1port.lua  ipv6.cfg  ipv6.lua  irq.cfg  l2fwd-4ports.cfg  l3fwd-4ports.cfg  lb_5tuple.cfg  lw_aftr.cfg  mcast.cfg  nat_table.lua  nop-rings.cfg  nop.cfg  nsh_acl.cfg  nsh_nat.cfg  pe-4ports.cfg  pe-8ports.cfg  qos-init.lua  (+7 more)
VNFs/DPPD-PROX/dpi/: Makefile  dpi.h  dpi_stub.c
VNFs/DPPD-PROX/flow_gen/: README  bundle_maker.lua  flow_gen_4ports.cfg  flow_gen_4ports.lua
VNFs/DPPD-PROX/helper-scripts/: start_vm.py  trailing.sh  vm-cores.py
VNFs/DPPD-PROX/helper-scripts/demo-scripts/: prox.py  tx_rate.py
VNFs/DPPD-PROX/helper-scripts/dpi/: README  config.py  csvreader.py  csvwriter.py  dpi1.py  dpi2.py  maketable.py  progress.py  prox.py  proxdpisut.py  proxdpitester.py  proxmaxssprobe.py  proxsocket.py  ratedistribution.py  remotesystem.py  resultprocessor.py  statsconsfile.py  sutstatsconsfile.py  systemconfig.py  testerset.py  timeseriespoint.py  tsstatsconsfile.py
VNFs/DPPD-PROX/helper-scripts/ipv6_tun/: gen_4over6.pl  ipv6_tun_bindings.pl
VNFs/DPPD-PROX/helper-scripts/openstackrapid/: 3VMrapid.yaml  3VMsriovrapid.yaml  MachineMap.cfg  README  basicrapid.test  centos.json  check_prox_system_setup.sh  createrapid.py  deploycentos.sh  deploycentos1.sh  deploycentos2.sh  devbind.sh  gen.cfg  gen_gw.cfg  impair.cfg  impair.test  irq.cfg  irq.test  l2framerate.test  l2gen.cfg  l2swap.cfg  l2zeroloss.test  l3framerate.test  prox_ctrl.py  prox_gen_user_data.sh  prox_user_data.sh  rapid.py  rapid.yaml  rapidVMs.vms  runrapid.py  secgw.test  secgw1.cfg  secgw2.cfg  sriovrapid.yaml  sut.cfg  swap.cfg
VNFs/DPPD-PROX/helper-scripts/prox-helm-charts/: Chart.yaml  NOTES.txt  README.md  values.yaml
VNFs/DPPD-PROX/helper-scripts/prox-helm-charts/templates/: prox-configmap.yml  prox-persistentLocalVolume.yaml  prox-pods.yml  prox-replicaset.yml  prox-virtualmachine.yaml
VNFs/DPPD-PROX/helper-scripts/rapid/: Dockerfile  README  README.k8s  TST009_Throughput.test  TST009_Throughput_64B_64F.test  TST009_Throughput_acaeab_16384F.test  bare.test  basicrapid.test  centos.json  check-prox-system-setup.service  check_prox_system_setup.sh  config_file  corestats.test  create_rapid_dir.sh  createrapid.py  createrapidk8s.py  deploycentostools.sh  devbind.sh  dockerimage.sh  format.yaml  gen.cfg  gen_gw.cfg  genv6.cfg  helper.lua  impair.cfg  impair.test  increment_till_fail.test  ipv6.test  irq.cfg  irq.test  k8sdeployment.py  l2framerate.test  l2gen.cfg  l2gen_bare.cfg  l2swap.cfg  l2zeroloss.test  l3framerate.test  machine.map  monitorswap.test  openstack-rapid.yaml  (+41 more)
VNFs/DPPD-PROX/helper-scripts/rapid/configs/: cgnat.cfg  esp.cfg  gen.cfg  gen_gw.cfg  genv6.cfg  impair.cfg  irq.cfg  l2gen.cfg  l2gen_bare.cfg  l2swap.cfg  public_server.cfg  secgw1.cfg  secgw2.cfg  setup.cfg  swap.cfg  swap_gw.cfg  swapv6.cfg
VNFs/DPPD-PROX/helper-scripts/rapid/port_info/: Makefile  meson.build  port_info.c
VNFs/DPPD-PROX/helper-scripts/rapid/rapid_helm_chart/: Chart.yaml  values.yaml
VNFs/DPPD-PROX/helper-scripts/rapid/rapid_helm_chart/templates/: deployment.yaml  serviceaccount.yaml
VNFs/DPPD-PROX/helper-scripts/rapid/tests/: README  TST009_Throughput.test  TST009_Throughput_64B_64F.test  TST009_Throughput_acaeab_16384F.test  TST009ipV6.test  bare.test  basicrapid.test  basicrapid_gw.test  cgnat.test  corestats.test  encrypt.test  impair.test  increment_till_fail.test  ipv6.test  irq.test  l2framerate.test  l2zeroloss.test  l3framerate.test  portstats.test  secgw.test
VNFs/DPPD-PROX/helper-scripts/rapid/xtesting/: Dockerfile  site.yaml  testcases.yaml
VNFs/DPPD-PROX/helper-scripts/testvRouter/: characterize_BNG_8ports.py  characterize_vRouter.py  characterize_vRouter_4_ports.py  create_interfaces_and_routes.pl  remote_system.py
VNFs/DPPD-PROX/tools/flow_extract/: Makefile  README  allocator.cpp  allocator.hpp  bundle.cpp  bundle.hpp  crc.hpp  csvfilereader.cpp  csvfilereader.hpp  flowtable.hpp  halfstream.cpp  halfstream.hpp  main.cpp  mappedfile.cpp  mappedfile.hpp  memreader.cpp  memreader.hpp  netsocket.cpp  netsocket.hpp  path.cpp  path.hpp  pcappkt.cpp  pcappkt.hpp  pcappktref.cpp  pcappktref.hpp  pcapreader.cpp  pcapreader.hpp  pcapwriter.cpp  pcapwriter.hpp  programconfig.cpp  programconfig.hpp  progress.cpp  progress.hpp  stream.cpp  stream.hpp  stream2.cpp  stream2.hpp  stream3.cpp  stream3.hpp  streamextract.cpp  (+5 more)
common/: cscope.out
docs/: INSTALL.rst  RELEASE_NOTES.rst  conf.py  conf.yaml  index.rst
heat_template/: cgnapt_heat_provider.yaml  cgnapt_heat_tenant.yaml  udp_replay_heat_provider.yaml  udp_replay_heat_tenant.yaml  vacl_heat_provider.yaml  vacl_heat_tenant.yaml  vfw_heat_provider.yaml  vfw_heat_tenant.yaml
rapidvm/: README.rst
tools/: samplevnf-img-dpdk-samplevnf-modify  (+3 more)
(+346 files in other folders)
